# zkanji

./: .gitignore  CMakeLists.txt  dataimports.sh  desktop-install.sh  zkanji.desktop
dataimports/: JLPTNData.txt
src/: checked_cast.h  dialogwindow.cpp  dictionaryeditorform.cpp  dictionaryeditorform.ui  dictionarystatsform.cpp  dictionarywidget.cpp  dictionarywidget.ui  examplewidget.cpp  examplewidget.ui  filterlistform.cpp  filterlistform.ui  formstates.cpp  furigana.cpp  globalui.cpp  globalui.h  grammar.cpp  groups.cpp  groups.h  groupstudy.h  groupwidget.ui  import.cpp  import.h  jlptreplaceform.cpp  kanapracticesettingsform.cpp  kanapracticesettingsform.ui  kanareadingpracticeform.cpp  kanawritingpracticeform.cpp  kanawritingpracticeform.ui  kanji.cpp  kanjigroupwidget.ui  kanjiinfoform.cpp  kanjiinfoform.ui  kanjilegacy.cpp  kanjireadingpracticeform.cpp  kanjisearchwidget.cpp  kanjisearchwidget.ui  kanjitooltipwidget.cpp  main.cpp  popupdict.cpp  popupdict.ui  (+68 more)
src/Qxt/: qxtglobalshortcut.cpp
